--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -213,6 +213,10 @@
     <Compile Include="Migrations\201607191606074_OverrideConventionsForGigAndGenre.Designer.cs">
       <DependentUpon>201607191606074_OverrideConventionsForGigAndGenre.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607191741068_PopulateGenreTable.cs" />
+    <Compile Include="Migrations\201607191741068_PopulateGenreTable.Designer.cs">
+      <DependentUpon>201607191741068_PopulateGenreTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -304,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607191606074_OverrideConventionsForGigAndGenre.resx">
       <DependentUpon>201607191606074_OverrideConventionsForGigAndGenre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607191741068_PopulateGenreTable.resx">
+      <DependentUpon>201607191741068_PopulateGenreTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
